# cautious-enigma

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Changelog  Chart.Yaml  Dockerfile  Helm Chart Structure  Kubernetes Manifest Structure  Makefile  README.md  Requirements.txt  SECURITY.md  alert.py  api.py  config.py  configmap.yaml  data_loader.py  deployment.yaml  detector.py  docker-compose.yml  feature_engineering.py  inventory.ini  logging.yaml  main.py  model.py  pyproject.toml  secret.yaml  service.yaml  setup.py  snowflake_ingest.py  values.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
ansible/: threat_detector_playbook.yml
app/: api.py  server.py
config/: config.yaml
docs/: architecture.md  dashboard.py  templates  test  usage.md
docs/threat_detector/: __init__.py
examples/: benchmark.py  example_pipeline.py  threat_scoring.py
notebooks/: ThreatDetection_EDA.ipynb
src/models/: baseline_model.py  inference.py  model_trainer.py
src/pipelines/: inference_pipeline.py  preprocess.py  train_pipeline.py
src/utils/: config.py  data_loader.py  logger.py  model_registry.py
templates/: deployment.yaml
templates/templates/: service.yaml
tests/: test_pipeline.py
